--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "mongoose": "^9.1.1",
     "multer": "^2.0.2",
+    "node-telegram-bot-api": "^0.63.0",
     "nodemailer": "^7.0.12"
   }
 }
